--- a/2-Animal_card_project/styles.css
+++ b/2-Animal_card_project/styles.css
@@ -3,6 +3,11 @@
   font-size: larger;
 }
 
+.image_class {
+  width: 300px;
+  height: 200px;
+}
+
 .body_frame {
   margin: 5px;
   border: 1px solid gray;
